--- a/package.json
+++ b/package.json
@@ -1,13 +1,34 @@
 {
   "name": "maha-cakes",
   "version": "1.0.0",
-  "description": "Premium cake e-commerce website for Maha Cakes",
+  "description": "Maha Cakes E-commerce with Backend & Admin Panel",
+  "main": "backend/server.js",
   "scripts": {
-    "dev": "npx serve .",
-    "build": "echo 'No build step required for static site'",
-    "start": "npx serve ."
+    "start": "node backend/server.js",
+    "dev": "nodemon backend/server.js",
+    "init-db": "node backend/scripts/init-database.js",
+    "frontend": "npx serve ."
   },
-  "keywords": ["cakes", "bakery", "ecommerce"],
+  "keywords": [
+    "cakes",
+    "bakery",
+    "ecommerce",
+    "nodejs",
+    "express"
+  ],
   "author": "Maha Cakes",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mysql2": "^3.6.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "multer": "^1.4.5-lts.1",
+    "express-validator": "^7.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  }
 }
